Day 46. 실습 프로젝트 ver.1.1.1 예외처리(작업중)

--- a/src/main/webapp/resources/css/list.css
+++ b/src/main/webapp/resources/css/list.css
@@ -86,9 +86,13 @@ button:hover {
 }
 .footer {
     background-color: black;
-    text-align: center;
-    height: 100%;
-    top: 0;
+    height: 30%;
 }
 
+.footer p {
+    color: white;
+    text-align: center;
+    margin: auto;
+    padding-top: 50px;
+}
 
