--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -40,6 +40,20 @@
     padding-bottom: 100px;
 }
 
+.main h2{
+    text-align: center;
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.main h6 {
+    text-align: center;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
 pre {
     text-align: center;
     margin: auto;
@@ -47,10 +61,14 @@ pre {
 
 .footer {
     background-color: black;
-    text-align: center;
-    height: 100%;
-    top: 0;
+    height: 30%;
 }
 
+.footer p {
+    color: white;
+    text-align: center;
+    margin: auto;
+    padding-top: 50px;
+}
 
 
