--- a/src/main/webapp/resources/css/update.css
+++ b/src/main/webapp/resources/css/update.css
@@ -54,7 +54,12 @@
 
 .footer {
     background-color: black;
+    height: 30%;
+}
+
+.footer p {
+    color: white;
     text-align: center;
-    height: 100%;
-    top: 0;
+    margin: auto;
+    padding-top: 50px;
 }
